--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-slate
+title: "CFD Engineering Portfolio - Kamil Dylewicz, PhD"
+description: "From geometry to convergence. CFD projects engineered for accuracy and performance."
