--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-title: "CFD Engineering Portfolio - Kamil Dylewicz, PhD"
-description: "From geometry to convergence. CFD projects engineered for accuracy and performance."
+title: "CFD Portfolio by Kamil Dylewicz, PhD"
+description: "CFD projects engineered for accuracy and performance."
