--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-slate
+theme: jekyll-theme-simple
 title: "CFD Portfolio by Kamil Dylewicz, PhD"
 description: "CFD projects engineered for accuracy and performance."
