--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-cayman
 title: "CFD Portfolio by Kamil Dylewicz, PhD"
 description: "CFD projects engineered for accuracy and performance."
 
