--- a/_config.yml
+++ b/_config.yml
@@ -1,33 +1,4 @@
 theme: jekyll-theme-cayman
 
-# Author information
-author:
-  name: "Kamil Dylewicz"
-
-# Site URL (important for SEO and sharing)
-url: "https://dylewiczk.github.io"
-baseurl: "" # leave blank for GitHub Pages root
-
-# Social links
-social:
-  github: "https://github.com/dylewiczk"
-  linkedin: "https://linkedin.com/in/kamil-dylewicz-5a2984170/"
-
-# Build settings
-markdown: kramdown
-highlighter: rouge
-
-# Plugins (add more as needed)
-plugins:
-  - jekyll-feed
-  - jekyll-seo-tag
-
-# Exclude files/folders from build
-exclude:
-  - README.md
-  - node_modules
-  - Gemfile
-  - Gemfile.lock
-
 # Permalinks
-# permalink: pretty
+permalink: pretty
