--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,24 @@
+title: My CFD Portfolio
+description: CFD projects engineered for accuracy and performance.
+author: "Kamil Dylewicz"
+
 theme: minima
 
-# Permalinks
-permalink: pretty
-
-plugins:
-  - jekyll-seo-tag
-  - jekyll-feed
-  - jekyll-sitemap
+# Minima: show excerpts in the frontpage
+show_excerpts: true
 
 minima:
-  social_links:
-    github: https://github.com/dylewiczk
-    linkedin: https://www.linkedin.com/in/kamil-dylewicz-5a2984170/
+  date_format: "%d-%m-%Y"
+
+# Minima: custom header links
+header_pages:
+  - _pages/projects.md
+  - _pages/about.md
+  - _pages/archive.md
+
+include:
+    - _pages
+
+# Minima social links
+github_username: dylewiczk
+linkedin_username: kamil-dylewicz-5a2984170
